# InferSight

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
dashboards/: infersight-vllm.json
deploy/: Dockerfile.hosted  prometheus.yml
deploy/grafana-provisioning/dashboards/: infersight.yml
docs/: REPORT.md  architecture.md  configuration.md  limitations.md
examples/: mock_vllm.py
hosted/: alerting.py  ingest.py  storage.py
hosted/static/: index.html
infersight/: __init__.py  cli.py  config.py  discovery.py  forwarder.py  metrics.py  proxy.py
launch/: community-post.md  show-hn.md
tests/: test_core.py  test_forwarder.py  test_hosted.py  test_proxy_e2e.py  test_regressions.py
