[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "infersight"
version = "0.1.0"
description = "Purpose-built observability for self-hosted LLM inference (vLLM, TGI, SGLang): TTFT, TBT, KV-cache pressure, queue depth."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "Archana Suresh Patil", email = "apatil@sandiego.edu" }]
keywords = ["llm", "vllm", "observability", "prometheus", "grafana", "inference", "ttft"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Topic :: System :: Monitoring",
]
dependencies = [
  "fastapi>=0.110",
  "uvicorn>=0.27",
  "httpx>=0.26",
  "prometheus_client>=0.19",
  "pydantic>=2.5",
]

[project.optional-dependencies]
hosted = []  # hosted server shares the same deps; split later if they diverge
dev = ["pytest>=8", "pytest-asyncio>=0.23"]

[project.scripts]
infersight = "infersight.cli:main"

[project.urls]
Homepage = "https://github.com/ArchanaChetan07/InferSight"

[tool.setuptools.packages.find]
include = ["infersight*", "hosted*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
